# diffusionpy

./: .gitignore  ASD_example.ipynb  Control_THFaktor.py  Control_THFaktor.xlsm  Extract_DVS.py  LICENSE  Pvac_toloul_methanol.ipynb  README.md  Stefan_Maxwell_segmental.py  Stefan_Maxwell_segmental_xloil.py  Stefan_Maxwell_segmental_xloil.xlsm  Test_Diffusionmodell.bat  Thumbs.db  Untitled.ipynb  bouncing_ball.py  conf.py  crystallization_test.py  diffusion_casadi.py  distillation.py  example.ipynb  index.rst  justinwarhier.txt  pyproject.toml  setup.py  test.py  testAOT.py  test_RDF.py  test_WENO.py  test_colloc.py  test_cyrk.py  test_hpmc.py  test_waterhpmcbpp.py  test_waternotmove.py  test_waterpvpind.py  testarduino.py  testcombo.py  testfeo.py  testgradient.py  testplot.py  testwegstein.py
.matplotlib/: fontlist-v330.json  matplotlibrc
PyFusion/: Stefan_Maxwell_segmental_xloil.py  __init__.py
_autosummary/: diffusionpy.Stefan_Maxwell_segmental.rst  diffusionpy.relaxation.rst  diffusionpy.rst  diffusionpy.testsurfaceact.rst
diffusionpy/: DasDennisSpacing.py  Extract_DVS.py  FEM_collocation.py  PCSAFT.py  PyCSAFT_Benchmark_nue.py  PyCSAFT_nue.py  Stefan_Maxwell_segmental.py  Stefan_Maxwell_segmental_scipy.py  Stefan_Maxwell_segmental_scipy2.py  Stefan_Maxwell_segmental_xloil.py  __init__.py  ares.py  crank_and_other.py  crystallization.py  diffusion.py  distillation.py  liquidseperation.py  plots.py  read_componentdatabase.py  relaxation.py  surf_plots.py  surface.py  surface_activity.py  tes.py  test_TH_Faktor_W_zu_X.py  test_numba_logger.py  testaverage.py  testinitialboundary.py  testsigmoid.py  testsurfaceact.py  testsurfaceact2.py  trialfornumbalsoda.py  utilities.py  wasser_pvpva_ind.py  xloil_functions.py  xlwings_functions.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: DGT.py  test.py  (+6 more)
(+455 files in other folders)
