
[project]
name = "diffusionpy"
version = "0.0.8"
authors = [
    {name = "Dominik Borrmann", email = "dominik.borrmann@tu-dortmund.de"},
]
description = "A package for describing diffusion in and out of liquids and amorphous substances"
readme = "README.md"
license = {text = "BSD-3-Clause"}

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "mpltern",
    "numba",]

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
[tool.setuptools.packages.find]
include = ["diffusionpy"]

[project.scripts]
diffusionpy_cli = 'diffusionpy.tests.PyCSAFT_Benchmark_nue:start'

[project.optional-dependencies]
# development dependency groups
exceladdin = ["xloil",
              "textdistance",
              "pywin32"]



